--- a/lesson_11/assets/SASS/pages/home/_activites.scss
+++ b/lesson_11/assets/SASS/pages/home/_activites.scss
@@ -1,4 +1,10 @@
 #activites{
+    background-image: url("/lesson_11/assets/images/Artboard-Copy-1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0px 233px;
+    
+
     .container{
         margin: 0;
         padding: 0 80px;
@@ -20,7 +26,41 @@
 
             h1{
                 color: $color-primary;
-                font-size: 1.2rem;
+                font-size: $font-size-md;
+                font-family: $font-primary;
+                letter-spacing: 2px;
+                text-align: center;
+            }
+        }
+        .main{
+            .img-container{
+                display: flex;
+                justify-content: center;
+                padding: 30px 0px;
+                padding-top: 50px;
+            }
+            p{
+                width: 90%;
+                margin: 0 auto;
+                text-align: center;
+                color: $color-primary;
+                padding-bottom: 50px;
+                font-family: $font-primary;
+                font-size:$font-size-md;
+            }
+        }
+        .action{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 25px;
+            background-color: transparent;
+            border-top: 8px solid $color-secondary;
+
+            a{
+                text-decoration: none;
+                color: $color-primary;
+                font-size: $font-size-md-x;
                 font-family: $font-primary;
             }
         }
