--- a/lesson_11/assets/SASS/style.css
+++ b/lesson_11/assets/SASS/style.css
@@ -253,6 +253,12 @@ table {
     width: 100%;
   }
 }
+#activites {
+  background-image: url("/lesson_11/assets/images/Artboard-Copy-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0px 233px;
+}
 #activites .container {
   margin: 0;
   padding: 0 80px;
@@ -261,7 +267,7 @@ table {
 #activites .section-name {
   color: #307FE2;
   font-size: 3rem;
-  font-family: "Lato", sans-serif;
+  font-family: "Lato-Bold", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
   padding: 4rem 0;
@@ -280,6 +286,37 @@ table {
 }
 #activites .active-card .header h1 {
   color: #FFFFFF;
-  font-size: 1.2rem;
-  font-family: "Lato", sans-serif;
+  font-size: 14px;
+  font-family: "Lato-Bold", sans-serif;
+  letter-spacing: 2px;
+  text-align: center;
+}
+#activites .active-card .main .img-container {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0px;
+  padding-top: 50px;
+}
+#activites .active-card .main p {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  color: #FFFFFF;
+  padding-bottom: 50px;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 14px;
+}
+#activites .active-card .action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+  background-color: transparent;
+  border-top: 8px solid #307FE2;
+}
+#activites .active-card .action a {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-family: "Lato-Bold", sans-serif;
 }/*# sourceMappingURL=style.css.map */
