--- a/Portfolio/src/Frontend/assets/SASS/style.scss
+++ b/Portfolio/src/Frontend/assets/SASS/style.scss
@@ -1,9 +1,6 @@
 @import "./base/reset";
 @import "./sass-utils/variables";
-// @import "./sass-utils/mixin";
+@import "./sass-utils/mixin";
 @import "./sass-utils/layouts";
 
-// @import "./layouts/navbar";
-
-@import "./pages/home/nav-Info-Bar";
-@import "./pages/home/main-Info";
+@import "./pages/home/homePage";
