--- a/Portfolio/src/Frontend/assets/SASS/sass-utils/_variables.scss
+++ b/Portfolio/src/Frontend/assets/SASS/sass-utils/_variables.scss
@@ -1,12 +1,12 @@
 /*Colors*/
 
-$color-primary: #FFFFFF;
+$color-primary: #e2e8f0;
 $color-secondary:#94A3B8; 
-$color-three: #49B0B2;
+$color-three: #53CEBD;
 
 /*Background Colors*/
 
-$bg-primary: #193653;
+$bg-primary: #19364F;
 
 /*Font Family*/
 
@@ -27,6 +27,10 @@ $font-Wt-secondary: 500;
 
 $border-radius: 1.125rem;
 
+
+/*Auto Height*/
+
+$section-h: 100vh;
 
 /*Auto width*/
 
