--- a/Portfolio/src/Frontend/assets/SASS/pages/home/homeSections/_main-Info.scss
+++ b/Portfolio/src/Frontend/assets/SASS/pages/home/homeSections/_main-Info.scss
@@ -1,45 +1,45 @@
-#main-Info{
-    height: 500vh;
+#main-Info {
     width: 50%;
     display: inline-flex;
     flex-direction: column;
-    padding: 6rem 0;
+    padding-bottom: 6rem;
     box-sizing: border-box;
     margin-left: auto;
     flex-wrap: wrap;
 
-    .main-About{
+    .main-About {
         width: 100%;
-        margin-bottom: 9rem;
+        padding-top: 6rem;
         display: flex;
         flex-direction: column;
         gap: 1rem;
 
-        p{
+        p {
             font-family: $font-primary;
-            font-size:$font-size-regular;
+            font-size: $font-size-regular;
             font-weight: $font-Wt-secondary;
             color: $color-secondary;
             line-height: 26px;
 
-            a{
+            a {
                 text-decoration: none;
                 color: $color-primary;
 
-                &:hover{
+                &:hover {
                     color: $color-three;
                 }
             }
         }
     }
 
-    .main-Info-cards{
-        margin-bottom: 4rem;
+    .main-Info-cards {
+        margin-bottom: 1.5rem;
+        padding-top: 6rem;
 
-        .card{
+        .card {
             margin-bottom: 0.75rem;
 
-            .card-direction{
+            .card-direction {
                 text-decoration: none;
                 width: 100%;
                 display: flex;
@@ -48,67 +48,208 @@
                 padding-bottom: 25px;
                 border-radius: 8px;
                 border: none;
-                
-                &:hover{
-                    background-color: rgba(255, 255, 255, 0.04); 
+
+                &:hover {
+                    background-color: rgba(255, 255, 255, 0.04);
                 }
 
-                &:hover .title{
+                &:hover .title {
                     color: $color-three !important;
                     align-items: center !important;
                 }
 
-                .card-header{
+                .card-header {
                     width: 25%;
 
-                    p{
+                    p {
                         width: 90%;
                         font-family: $font-primary;
-                        font-size:calc($font-size-regular - 4px);
+                        font-size: calc($font-size-regular - 4px);
                         font-weight: $font-Wt-secondary;
                         color: $color-secondary;
                         margin-top: 3px;
                     }
+
+                    img {
+                        margin-top: 5px;
+                        width: 85%;
+                        border: 2px solid rgba(226, 232, 240, .1);
+                        border-radius: 4px;
+                    }
+
                 }
 
-                .card-main{
+                .card-main {
                     width: 75%;
 
-                    .card-text{
+                    .card-text {
                         width: 100%;
 
-                        .title{
+                        .title {
                             display: flex;
                             align-items: flex-end;
                             font-family: $font-primary;
-                            font-size:calc($font-size-md - 2px);
+                            font-size: calc($font-size-md - 2px);
                             font-weight: $font-Wt-primary;
                             color: $color-primary;
                             margin-bottom: 10px;
 
-                            .icon-title{
-                                height: 16px;
-                                width: 16px;
-                                margin-left: 7px;
+                            .icon-title {
+                                @include link-svg;
                             }
                         }
-                        .description{
+
+                        .description {
                             font-family: $font-primary;
-                            font-size:calc($font-size-regular - 2px);
+                            font-size: calc($font-size-regular - 2px);
                             font-weight: $font-Wt-secondary;
                             color: $color-secondary;
                             margin-bottom: 16px;
-                            line-height: 26px;
+                            line-height: 20px;
                         }
                     }
 
-                    .stac-area{
+                    .stac-area {
                         display: flex;
                         align-items: center;
                         flex-wrap: nowrap;
 
-                        button{
+                        button {
                             @include stac-btn;
+                        }
+                    }
+                }
+            }
+        }
+
+        .page-direction {
+            width: 100%;
+            display: flex;
+            margin-top: 2rem;
+            padding-left: 25px;
+            box-sizing: border-box;
+
+            a {
+                text-decoration: none;
+                display: flex;
+                align-items: flex-end;
+                font-family: $font-primary;
+                font-size: $font-size-regular;
+                font-weight: $font-Wt-primary;
+                color: $color-primary;
+
+                &:hover {
+                    color: $color-three;
+                    align-items: flex-start;
+                }
+
+                svg {
+                    @include link-svg;
+                }
+            }
+        }
+    }
+
+    .project-dir {
+        display: flex;
+        margin-bottom: 8rem;
+        padding-left: 25px;
+        box-sizing: border-box;
+
+        .project-link {
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            font-family: $font-primary;
+            font-size: $font-size-regular;
+            font-weight: $font-Wt-primary;
+            color: $color-primary;
+
+            &:hover {
+                gap: 7px;
+                text-decoration: underline;
+                text-decoration-color: $color-three;
+                text-underline-offset: 4px;
+            }
+
+            svg {
+                @include link-svg;
+            }
+        }
+    }
+
+    .other-projects {
+        margin-bottom: 9rem;
+
+        .card {
+
+            .card-direction {
+                text-decoration: none;
+                width: 100%;
+                display: flex;
+                padding: 15px 25px;
+                box-sizing: border-box;
+                border-radius: 8px;
+                border: none;
+                margin-bottom: 20px;
+
+                &:hover {
+                    background-color: rgba(255, 255, 255, 0.04);
+                }
+
+                &:hover .title {
+                    color: $color-three !important;
+                    align-items: center !important;
+                }
+
+                .card-header {
+                    width: 120px;
+                    height: 75px;
+                    margin-right: 20px;
+
+                    p {
+                        width: 90%;
+                        font-family: $font-primary;
+                        font-size: calc($font-size-regular - 4px);
+                        font-weight: $font-Wt-secondary;
+                        color: $color-secondary;
+                        margin-top: 3px;
+                    }
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        border: 2px solid rgba(226, 232, 240, .1);
+                        border-radius: 4px;
+                    }
+
+                }
+
+                .card-main {
+                    width: calc(100% - 140px);
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    justify-content: center;
+                    flex-wrap: nowrap;
+
+                    .date {
+                        color: $color-secondary;
+                        font-family: $font-primary;
+                        font-weight: $font-Wt-secondary;
+                    }
+
+                    .title {
+                        display: flex;
+                        align-items: flex-end;
+                        font-family: $font-primary;
+                        font-size: $font-size-regular;
+                        font-weight: $font-Wt-primary;
+                        color: $color-primary;
+
+                        svg {
+                            @include link-svg;
+                            margin-left: 3px;
                         }
                     }
                 }
@@ -116,9 +257,184 @@
         }
     }
 
-}
-@media  (max-width:992px) {
-    #main-Info{
-        padding: 0;
+    .project-stack {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        p {
+            font-family: $font-primary;
+            font-size: $font-size-regular;
+            color: $color-secondary;
+            line-height: 22px;
+
+            span {
+                text-decoration: none;
+                color: $color-primary;
+
+                &:hover {
+                    color: $color-three;
+                }
+            }
+        }
     }
+
+    .res-about {
+        display: none;
+        margin-top: 6rem;
+        padding: 20px 0px;
+        background-color: rgba(15, 23, 42, 0.75);
+        font-family: $font-primary;
+        font-size: $font-size-md;
+        font-weight: $font-Wt-primary;
+        color: $color-primary;
+        position: sticky;
+        backdrop-filter: blur(5px);
+        top: 0;
+        z-index: 20;
+        margin-bottom: 20px;
+    }
+
+}
+
+@media (max-width:1200px) {
+    #main-Info .main-Info-cards .card .card-direction .card-main .stac-area button {
+        font-size: 12px;
+    }
+}
+
+@media (max-width:992px) {
+    #main-Info {
+        padding: 0;
+        width: 100%;
+        margin: 0;
+
+        .res-about {
+            display: flex;
+            width: 100vw;
+            margin-left: -3rem;
+            padding-left: 3rem;
+            
+        }
+
+        .main-About{
+            padding-top: 0;
+        }
+
+        .main-Info-cards{
+            width: 100%;
+            padding-top: 0;
+        }
+
+        .project-dir{
+            width: 100%;
+        }
+
+        .other-projects{
+            width: 100%;
+
+            .card{
+                .card-direction{
+                    .card-header{
+                        width: 200px;
+                        height: 131px;
+                    }
+                    .card-main{
+                        width: calc(100% - 220px);
+                    }
+                }
+            }
+        }
+
+        .project-stack{
+            p{
+                max-width: 450px;
+            }
+        }
+    }
+}
+
+@media (max-width:450px) {
+	#main-Info{
+        .res-about{font-size: 14px;}
+
+        .main-Info-cards{
+
+            .card{
+                margin-bottom: 3.5rem;
+
+                .card-direction{
+
+                    padding: 0;
+                    flex-direction: column;
+                    gap: 8px;
+
+                    &:hover{
+                        background-color: transparent;
+                    }
+
+                    .card-header{
+                        width: 100%;
+                    }
+
+                    .card-main{
+                        width: 100%;
+
+                        .stac-area{
+                            flex-wrap: wrap;
+                            gap: 8px;
+
+                            button{
+                                margin-right: 0;
+                            }
+                        }
+                    }
+
+                }
+            }
+
+            .page-direction{
+                padding-left: 0;
+            }
+
+        }
+        
+        .project-dir{
+            padding-left: 0;
+        }
+
+        .other-projects{
+            width: 100%;
+            margin-bottom: 2rem;
+
+            .card{
+                .card-direction{
+                    padding: 0;
+                
+                    &:hover{
+                        background-color: transparent;
+                    }
+
+                    .card-header{
+                        width: 30%;
+                        margin-right: 0;
+
+                        img{
+                            width: 80%;
+                            height: 38%;
+                            margin-right: auto;
+                        }
+                    }
+                    .card-main{
+                        width: 70%;
+                        justify-content: flex-start;
+                    }
+                }
+            }
+        }
+
+
+    }
+
+
 }
