--- a/lesson_27/assets/Css/style.css
+++ b/lesson_27/assets/Css/style.css
@@ -19,6 +19,7 @@ body {
 }
 
 .display {
+    width: 100%;
     background-color: rgb(214, 212, 212);
     color: black;
     font-size: 2.5em;
@@ -29,6 +30,9 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    box-sizing: border-box;
+    margin-top: 0;
+    border: none;
 }
 
 .buttons {
